<resources>
    <string name="app_name">Njam.ba v1.01 Alfa</string>

    <!-- hints -->
    <string name="hint_email">Your email</string>
    <string name="hint_password">Your password</string>
    <string name="hint_filter">Search</string>

    <!-- buttons -->
    <string name="button_login">Login</string>
    <string name="button_go_to_all_meals">Go To All Meals</string>


    <!-- keys -->
    <string name="key_user_email">com.example.liquidsun.njam.ba/service.user_email</string>
    <string name="key_user_password">com.example.liquidsun.njam.ba/service.user_password</string>

    <!-- Toast -->
    <string name="toast_try_again">Something went wrong! Try again</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_meals">MealsActivity</string>


    <string name="title_activity_single_name">Meal information</string>
    <string name="title_activity_restaurants">RestaurantsActivity</string>
    <string name="title_activity_splash_screen">Test</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_single_restaurant">SingleRestaurantActivity</string>

    <!-- Errors -->
    <string name="error_splash">Error has occurred</string>
    <string name="error_explanation">"Please retry"</string>
    <string name="error_advice">If you are unsuccessful the service might be down</string>
   <string name="error_reload">Retry</string>
    <string name="title_activity_error_loading">ErrorLoading</string>

    <string name="title_activity_restaurant_meals">RestaurantMealsActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_new_meal">NewMealActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_main">NewMainActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>







    <!-- v3 -->
    <string name="app_name_:V3">OS List</string>
    <string name="hello_world_v3">Hello world!</string>
    <string name="action_settings_v3">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>





</resources>
