<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"

    tools:context="com.example.liquidsun.njamba.ErrorLoading"
    android:weightSum="1">



    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:gravity="center"
            android:text="@string/error_splash"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:paddingBottom="20dp"/>

        <TextView
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/error_explanation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"/>

         <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_reload"
        android:textSize="20dp"
             android:textStyle="bold"
        android:padding="30dp"
        android:id="@+id/button_retry"

        />


    <TextView
        android:gravity="center"
        android:text="@string/error_advice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>
        </LinearLayout>





</LinearLayout>
